Add prometheus metrics endpoint.

--- a/glide.yaml
+++ b/glide.yaml
@@ -18,3 +18,5 @@ import:
 - package: github.com/hashicorp/go-multierror
 - package: github.com/cenkalti/backoff
   version: ^1.0.0
+- package: github.com/prometheus/client_golang
+  version: ^0.8.0
