Rename demo folder to sample-app.

--- a/sample-app/Dockerfile
+++ b/sample-app/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:3.4
 MAINTAINER Francis Chuang <francis.chuang@boostport.com>
 
-ADD demo /demo
+ADD sample-app /sample-app
 
-ENTRYPOINT ["/demo"]
+ENTRYPOINT ["/sample-app"]
