--- a/glide.yaml
+++ b/glide.yaml
@@ -2,16 +2,16 @@ package: github.com/Boostport/kubernetes-vault
 import:
 - package: github.com/hashicorp/raft
 - package: github.com/hashicorp/serf
-  version: ^0.8.0
+  version: ^0.8.1
 - package: github.com/Sirupsen/logrus
-  version: ^0.11.0
+  version: ^0.11.2
 - package: github.com/hashicorp/raft-boltdb
 - package: github.com/pkg/errors
   version: ^0.8.0
 - package: k8s.io/client-go
-  version: ^2.0.0-alpha.0
+  version: ^2.0.0
 - package: github.com/hashicorp/vault
-  version: ^0.6.2
+  version: ^0.6.5
   subpackages:
   - api
 - package: github.com/mitchellh/mapstructure
@@ -20,3 +20,5 @@ import:
   version: ^1.0.0
 - package: github.com/prometheus/client_golang
   version: ^0.8.0
+- package: github.com/spf13/viper
+- package: github.com/spf13/cobra
