Implement configuration files for the controller and support using an external CA for TLS

--- a/controller/Dockerfile
+++ b/controller/Dockerfile
@@ -1,6 +1,9 @@
-FROM alpine:3.4
+FROM alpine:3.5
 MAINTAINER Francis Chuang <francis.chuang@boostport.com>
 
-ADD kubernetes-vault /kubernetes-vault
+RUN mkdir -p /kubernetes-vault
 
-ENTRYPOINT ["/kubernetes-vault"]
+ADD kubernetes-vault /bin/kubernetes-vault
+ADD docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
+
+ENTRYPOINT ["docker-entrypoint.sh"]
