--- a/deployments/quick-start/sample-app.yaml
+++ b/deployments/quick-start/sample-app.yaml
@@ -14,7 +14,8 @@ spec:
         pod.beta.kubernetes.io/init-containers: '[
           {
             "name": "install",
-            "image": "boostport/kubernetes-vault-init:0.2.0",
+            "image": "boostport/kubernetes-vault-init:0.3.0",
+            "imagePullPolicy": "Always",
             "env": [
                 {
                     "name": "VAULT_ROLE_ID",
@@ -32,7 +33,7 @@ spec:
     spec:
       containers:
       - name: sample-app
-        image: boostport/kubernetes-vault-sample-app:0.2.0
+        image: boostport/kubernetes-vault-sample-app:0.3.0
         volumeMounts:
         - name: vault-token
           mountPath: /var/run/secrets/boostport.com
