Add option to disable logging in and retrieving the auth token in the init container

--- a/deployments/secured-external-ca/kubernetes-vault.yaml
+++ b/deployments/secured-external-ca/kubernetes-vault.yaml
@@ -39,100 +39,99 @@ data:
 
   cert.pem: |-
     -----BEGIN CERTIFICATE-----
-    MIID2zCCAsOgAwIBAgIUNO5trP0w8VQL6XvDtMk8QUT7Zu8wDQYJKoZIhvcNAQEL
-    BQAwGjEYMBYGA1UEAxMPSW50ZXJtZWRpYXRlIENBMB4XDTE3MDMwMTIyMTQ1MVoX
-    DTE3MDMwMjIyMTUyMVowGzEZMBcGA1UEAxMQa3ViZXJuZXRlcy12YXVsdDCCASIw
-    DQYJKoZIhvcNAQEBBQADggEPADCCAQoCggEBALP/DHjf/8RqsaormJd/nDnrtRn6
-    SLbDMzcKAq2zyUUB9yaT7BBjNw55erGnQcldUBwRetkOqvZrvQSnWBMnSLrzhHsY
-    rY/E+vSsjXv9j8LgNQM0FhUEVnpGKTLh1XKSV6LIHRSNyhzYZNMp9iYXU2oFYZkI
-    aio7W6ghYlYbIZvDt9RYhR553+1qkTkDTuBQsyW9HSoZ8+RQjnALU/iV+vQ54KGv
-    2vUmAXp3Nn6ndnsTKktuigxbTlDmMiXnsvqFBZWGp1ikK0+CISX8jKijEGFl5Y9h
-    VYwfDIR8mfVL7leblYviXkNnF8ji+5JAglmU/mWXDcVeU2FamsBw2ylJk3sCAwEA
-    AaOCARYwggESMA4GA1UdDwEB/wQEAwIDqDAdBgNVHSUEFjAUBggrBgEFBQcDAQYI
-    KwYBBQUHAwIwHQYDVR0OBBYEFBu3aDr+Lr2sq6o9rpBTng/AAuMpMB8GA1UdIwQY
-    MBaAFBHy75SM4equqDhv+Q8kD3IH1T77MEMGCCsGAQUFBwEBBDcwNTAzBggrBgEF
-    BQcwAoYnaHR0cDovL3ZhdWx0OjgyMDAvdjEvaW50ZXJtZWRpYXRlLWNhL2NhMCEG
-    A1UdEQQaMBiCEGt1YmVybmV0ZXMtdmF1bHSHBH8AAAEwOQYDVR0fBDIwMDAuoCyg
-    KoYoaHR0cDovL3ZhdWx0OjgyMDAvdjEvaW50ZXJtZWRpYXRlLWNhL2NybDANBgkq
-    hkiG9w0BAQsFAAOCAQEA1E9ZvvkiYaoc/H8vKQdkPg9/ArZ7CC23Vhg2zMcMS9dY
-    l3oSgX4AFfgC36GyGUIaOvReZTErs4cI+zqnP79jgKy8b3wU2i/yCdtdwoeQPxwp
-    P0cCeNLBlpHWs/pzu/HcXONzHAKmFDp+wMSdHGmDdItSmxiwgD0WxdiKFOqYSMsQ
-    fwLtC/ujN9NzKhFMIoL3ra4L/hydwCEv04dH4eSmz8MS/ik3SYED4+b14pHB0bM+
-    DO4tQTT994I2HMrnNDBRmiBiHN7Ca5nw1CUGBLnVK0IlGFhHJpLV07ICwEJRKjah
-    3bpqeukgw8WD4dlukN9QwOen1zBXK9Bk61bzLJx48Q==
+    MIID6DCCAtCgAwIBAgIUWPiW0GBRZeWx9mbZtzDNHRabT8swDQYJKoZIhvcNAQEL
+    BQAwGjEYMBYGA1UEAxMPSW50ZXJtZWRpYXRlIENBMCAXDTE3MDMwMzA1NDkxNloY
+    DzIwNjcwMjE5MDM0OTQ2WjAbMRkwFwYDVQQDExBrdWJlcm5ldGVzLXZhdWx0MIIB
+    IjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEA0LVUqLLJOOUnBjc17FqlKE/n
+    QiuYMZrovKfOqKuCfzPu6CqjYpFiK4BR6Dw6j4pxpQu4lIQLFqs4e5+EVuFnzTyr
+    fUwMcspO3inZ7+7YQGZTo1ZmPgLwLlCBHPQokLKjA8PHQf2LZJW5juAB6Y1968pQ
+    bPpeD8oMMKXewytstGauPpLs+cUyz9+DjACM+YFe4XAJaSyYVJFHoqy8heidOgKX
+    7EomNIFi/pgRZZOxKd4Z46PpBke5whjX0ZUx3zR4VHpp9y+sOjML3EVOmoRDXqFL
+    951WQICW80q1J9j1YKqq/cbtdTbmaFxWozlYSmCp0GB7cLUqzPnmADZ+CL8uPwID
+    AQABo4IBITCCAR0wDgYDVR0PAQH/BAQDAgOoMB0GA1UdJQQWMBQGCCsGAQUFBwMB
+    BggrBgEFBQcDAjAdBgNVHQ4EFgQU0UigrSv7X97CLRze4ItAAdGgWAcwHwYDVR0j
+    BBgwFoAUv3RNXviPfxATRxIauafY9RRfvmowQwYIKwYBBQUHAQEENzA1MDMGCCsG
+    AQUFBzAChidodHRwOi8vdmF1bHQ6ODIwMC92MS9pbnRlcm1lZGlhdGUtY2EvY2Ew
+    LAYDVR0RBCUwI4IQa3ViZXJuZXRlcy12YXVsdIIJbG9jYWxob3N0hwR/AAABMDkG
+    A1UdHwQyMDAwLqAsoCqGKGh0dHA6Ly92YXVsdDo4MjAwL3YxL2ludGVybWVkaWF0
+    ZS1jYS9jcmwwDQYJKoZIhvcNAQELBQADggEBAIVmY7hEs6wQbtC3CaFNC5+Nx2Vx
+    eoGco7HMmFcSfGTTNgw7FA0tHikI4Q0hMCeDi4qMy+AYfzBMrYR0T0TmocOO4kNX
+    nsBsyf/0Mb6pLfFg3js1IMfUrHW8h/vMgTRiLL1PejijuJeXgZEO4XXBdmos8WiH
+    ixEOYJHYvecDndOFS6YqAP/NTHkJVhf1NFkMmlHJVjDn6bBwW00yVKZthZ6APNCr
+    XgKaKX0p2BChh8bxwrTQgMattwPnnS1MiZi6tx+zs99qQByPkPfRCV8ABOnHDvyO
+    SnETdHv4zaIVNMcrpHs9f3qhFvYtAgeT3xuBmjWgCFFrtbhvsMif3p2dnXk=
     -----END CERTIFICATE-----
     -----BEGIN CERTIFICATE-----
-    MIIDjzCCAnegAwIBAgIUKKS6n9WQGD2XSyN7+oS9kApMiMswDQYJKoZIhvcNAQEL
-    BQAwEjEQMA4GA1UEAxMHUm9vdCBDQTAeFw0xNzAzMDEyMjExNDNaFw0xNzA0MDIy
-    MjEyMTNaMBoxGDAWBgNVBAMTD0ludGVybWVkaWF0ZSBDQTCCASIwDQYJKoZIhvcN
-    AQEBBQADggEPADCCAQoCggEBANbI5f4DbMxmWGHye6cPMNnH0B6xpKKQHOPsBoP0
-    pWVXbyLlgGSidWG16qgOFyhU5fH6ed0Fmzzta5hQnu8kqKG1r4KMkOQgj2SsemGb
-    BzvFrnGwxSzA0gDlS16qAqOmhlQ4EX8SUIJ9N2iat2aKE+GgntIpR8Vi/n/optXB
-    d3G6lmERf0nw1xS87+Ip2438+8scePLHsUTvOPckUE5U4uSIrr1Gv6HNiGvLnvWO
-    giRAnur/ikDDU1jHY/gqnzjrHZyj2MZkMeeALreMxFl0fnyPffe5WQeFFJ8BgkI2
-    iqPTnEtGGvsEKAWCoAicvXty2U/ByPlvfYvUGBZYJUOjK6UCAwEAAaOB1DCB0TAO
-    BgNVHQ8BAf8EBAMCAQYwDwYDVR0TAQH/BAUwAwEB/zAdBgNVHQ4EFgQUEfLvlIzh
-    6q6oOG/5DyQPcgfVPvswHwYDVR0jBBgwFoAUPhlpd5lroV3b7nxeVQTrOH0WHsgw
-    OwYIKwYBBQUHAQEELzAtMCsGCCsGAQUFBzAChh9odHRwOi8vdmF1bHQ6ODIwMC92
-    MS9yb290LWNhL2NhMDEGA1UdHwQqMCgwJqAkoCKGIGh0dHA6Ly92YXVsdDo4MjAw
-    L3YxL3Jvb3QtY2EvY3JsMA0GCSqGSIb3DQEBCwUAA4IBAQCXvaglJ2Sc04vz7m6f
-    t08LXIXeFyXGSs1YX7UarWf9V12g6UQwGgb+NrN7x1wuWHrEahmQl+SxTtXvbQqB
-    ipHAzCbFV/pSPcF4LQkDcY6iXYakzeeFB4rgP+g2W/3i6VV0jGPaD1p4Ttv3hpIh
-    l2Nrwp/wR7VcO/df2NulcFEPIqOiKI8GqTA3HkZFg/tIlymMxQc7zZPBiSqC7TyY
-    KegKN2G/VDOLoFnvcUq033A+yF3ULabpT8CuScV2kPU+XFYMM9+n0GDRwiU0C6g0
-    XbxuRKVbfKEVvUP/R9+Kpthm4TGmHCy2EyuieRlLXdgnWqyZV+jYu9E7a+hcU61B
-    fLha
+    MIIDkTCCAnmgAwIBAgIUXvxwgZK/6qtpxmuZty23U6AVnF0wDQYJKoZIhvcNAQEL
+    BQAwEjEQMA4GA1UEAxMHUm9vdCBDQTAgFw0xNzAzMDMwNTQ2NDRaGA8yMDY3MDIx
+    OTA0NDcxNFowGjEYMBYGA1UEAxMPSW50ZXJtZWRpYXRlIENBMIIBIjANBgkqhkiG
+    9w0BAQEFAAOCAQ8AMIIBCgKCAQEAol8fFnbOHydXo6wnuuhEb3NfJu0+0RTgFzWr
+    6xekvQrsRL4tUIonhC3xOXyINswhOI53XLZCTnSd4L7oVdY0umoNRXqtpSvjulK0
+    Ggd5+dxzBKQbAQ+DWemN8g9fLbkd8R0fx3gtmjY+4hASFuyX+wI/jroTy+Cyluid
+    ahVZmzDEW/KyGjBN4xxkTlHceX8VFvwb7f/39ALCl9mBLpDiTD8qLkZRPZUzX02J
+    OGLylGK57UTS/9zLC39+eil1/qycpBPHbVXj+AnSIp4F+ikAfY1OWC08fqK1H6LA
+    iuqk2uSA4Ft0vyRhGPt/TttrvWTVx+VeCxHi+cXmtY9lQnuaqwIDAQABo4HUMIHR
+    MA4GA1UdDwEB/wQEAwIBBjAPBgNVHRMBAf8EBTADAQH/MB0GA1UdDgQWBBS/dE1e
+    +I9/EBNHEhq5p9j1FF++ajAfBgNVHSMEGDAWgBSp7Khi3m9qqsC82CRLaPkPcYO2
+    nzA7BggrBgEFBQcBAQQvMC0wKwYIKwYBBQUHMAKGH2h0dHA6Ly92YXVsdDo4MjAw
+    L3YxL3Jvb3QtY2EvY2EwMQYDVR0fBCowKDAmoCSgIoYgaHR0cDovL3ZhdWx0Ojgy
+    MDAvdjEvcm9vdC1jYS9jcmwwDQYJKoZIhvcNAQELBQADggEBABMF+ferbsJC3dlw
+    6kUsd+idLuYM1eXhpjgkgh2D/5H01Hjar39tuIZNH8uTPCNNvV/o5UHEG7b97XEk
+    +EXH9HZopFYYuSqQZqE+x8Cq9uKXWaSI69w7N9zVyMFEX+ZsHRm6lvntedZhXERU
+    HHUiD8Qvf5Dui4RLXcO6eKT6zr0fVNurl6hs3l6ma4Z0zDmrgBhlxrW98gXhRRyK
+    5M0AxBAfNRsT7hu+Tp7xrNuhDOE+SPotbIVi30rVAn88BhkYAtJK3CIAKRJ1W5bW
+    Sjv5ZzZvfE6u0R255qpoJQfUjHUL1OmFTW3yJrgjabrz/GgsagbD53h33ML9cNez
+    hhBu79U=
     -----END CERTIFICATE-----
 
   cert.key: |-
     -----BEGIN RSA PRIVATE KEY-----
-    MIIEowIBAAKCAQEAs/8MeN//xGqxqiuYl3+cOeu1GfpItsMzNwoCrbPJRQH3JpPs
-    EGM3Dnl6sadByV1QHBF62Q6q9mu9BKdYEydIuvOEexitj8T69KyNe/2PwuA1AzQW
-    FQRWekYpMuHVcpJXosgdFI3KHNhk0yn2JhdTagVhmQhqKjtbqCFiVhshm8O31FiF
-    Hnnf7WqROQNO4FCzJb0dKhnz5FCOcAtT+JX69Dngoa/a9SYBenc2fqd2exMqS26K
-    DFtOUOYyJeey+oUFlYanWKQrT4IhJfyMqKMQYWXlj2FVjB8MhHyZ9UvuV5uVi+Je
-    Q2cXyOL7kkCCWZT+ZZcNxV5TYVqawHDbKUmTewIDAQABAoIBAE5bb6CHUx68m89K
-    30jEgswsMlC2xkTZwUfqkbPwmmPyMReYOaIArw0cES+ZcmgouSEe8u3fFsnjqQuH
-    li3wYhcQv9Gesp/tzpoJLCaYAaeCV1GnsR1BICxmsrS132fbEU+J8i7qctwP0ASl
-    NcTrTqLO6Ofn49+yq3oL3nVBpmXaGGB7xdyLQKUjscnzotXnmf8zFexE8uq+Ou9a
-    YdhwWWOGmlIsPRpmXbDAnqX7RrkGAL+BCdvRl1iXT+/m+tjarXxr1ZPr0ZL1rPvX
-    NB8DvCdr1lkpOHTxFLjZXfiAQpXfnG7tNFOJa5xhvMI6OyH5EMFeldiAqRAPdKnY
-    Xp21hiECgYEA6pWD5/YCGnlZEPOxQJU+YdqRnTCMviSg6ud2KprYzwmY5B7omKcc
-    dKvKqzJY4P0AEWRaYEM9Ql87hgIguT47q4hOr1mnbvcr1ouiuSXzFxBj4HgFaifi
-    Q2YWqSBFfZ0bFUxhJCtZJvnCwtaR55jDtknDa1XIKSpn/PePC2LxS0kCgYEAxG3C
-    DftcCLYpF3y1BWVpkm41cyrJpDos4xDxUlRej8mJVbtEdPqKCvCbbdNHmLzu2S5F
-    xZE9B2uDpyz+R0ggTmB58DWsl+PENhhP9Mxkm6npnYijYkzpaVLRVyApv5UHZgGT
-    ieAVRTFsDR/m1cs024yflISYyfayQWMMDWsthKMCgYBR/l6zpkZH8KBUD4mmFERQ
-    ua/p7H1VPMJOOQcRjzw26ZjaK3+LU+XbVeyp+Bge0+/BJH1+ZiI0X8sTZQ0BEqKS
-    qzstiT2/yH83J2mCI6SbLCxs2iayWyx3+Gf1R4ViiZZc1Gyj0s7/k48iwRMQi1Hl
-    FlVK4BntYZglUHZcOYIzmQKBgQCoF9EPjAHXRqNlgQecBYvRjlRZKM2Dp3EQI0iQ
-    DrkZTPskjWvouxn0gLBRzJMhZtTyr8Fvb3mNZvkzz7IOJ+/VgoP3Bsea94PKUwXh
-    VCPoff/4GpzOm0jHI+MXLuPrGcpKBaFPRJ6PJtrzZFBytkGWfAF34/yoIF+syuje
-    dtBuBwKBgDm8lXznjjP5TZUq9eIW/NWN+4+Qm7367MCMYl+wVwuJay1IYo7aQase
-    fnQuZHW3hDB9htuuie8Ck7KbohsF6puMcT4Edup3e6WMpHSl9MqvGz4zdste0KlN
-    3on42ZmKSVqsIkwmYOoA2/B4Tv1KwydABOcPaqdgTJb5Krj6YEpG
+    MIIEpAIBAAKCAQEA0LVUqLLJOOUnBjc17FqlKE/nQiuYMZrovKfOqKuCfzPu6Cqj
+    YpFiK4BR6Dw6j4pxpQu4lIQLFqs4e5+EVuFnzTyrfUwMcspO3inZ7+7YQGZTo1Zm
+    PgLwLlCBHPQokLKjA8PHQf2LZJW5juAB6Y1968pQbPpeD8oMMKXewytstGauPpLs
+    +cUyz9+DjACM+YFe4XAJaSyYVJFHoqy8heidOgKX7EomNIFi/pgRZZOxKd4Z46Pp
+    Bke5whjX0ZUx3zR4VHpp9y+sOjML3EVOmoRDXqFL951WQICW80q1J9j1YKqq/cbt
+    dTbmaFxWozlYSmCp0GB7cLUqzPnmADZ+CL8uPwIDAQABAoIBAGc7ScSnqiAaOFM6
+    u9FMhKSL4Tc5mO3wUW3/EpkbPFDuvxzW+jmm74fU0K6uG8kkEVIxmfrb1SBBUI7V
+    OABBPbama6xuETo2FwyMZt/mo9A2zOfdtHS3v1UpPLO1kNsBgOA71jMt1eTKqh2h
+    b1C2S7J1P5KnxB7LMXxejvC6aepQeru3px8T5bRRdB8RgLoZsw8OkhlLh7HM7nV/
+    D1hetDgw3ten+6tSb9GMZHWgM48f4+yGfCFW+lfbYm0AdogBuG6DUgBgfgho91jP
+    MzIAsFuLKRaovpmcZWMlEgcm5eWXmkmECDVytTD5nshKu0g2xFGdqPx8kxOj8BDI
+    yV10DAECgYEA3SS4AQHpk17D+hywKDr8gicRQD42kiWoQHLuUYeUQ2zjlZL73yug
+    YCuOgJZRSU4aDl6NX024rNxRgoc8Qt+85ti6kvy8wwKI6Tv0WMqVoJHtdLBiehK1
+    utCWWj6D5ej9g1t3eulPd+Y+HR1Kiyj0OfuZIDpPouyTXFcjpfKKXk8CgYEA8ZrY
+    4KtTHn4Q2y8UgHOBucjDGruIVpFOXVfRlgXMy9j1Yc7Dox+DCh8iaR4Rz9sbVXec
+    qT+cOcN9letNyUbLNqFv+lRE7fLe9F2MQNvny0ODiSzOh8DpckBxN/C3hB9/qsi8
+    evAE6k80l4SYF4gizEIwRok+PLE2vtHRLzlapRECgYEAyUZ/VyNndaNeGgn8Z1Fw
+    vAFU2TUGtDQkFCzHLluJHWlBJsU2C+SIPp/GPtERwPeeDZAPejuiJ2sLoRL3TSKY
+    qz99aQUxxQhMloPkHOCeGRxYlMlpiBP5ZcQt5Itbv2k1PFaGw88Qbl+YDyW20DwB
+    NbkCoOuRygcrBHOnVYYQXE8CgYEArAhPT0KOr9KiG//dAE2+3FPYoMtRnBphC1QB
+    t2ov1iKJLvi0Ew3YF7ftn526nx9ryiKeWWEi03qgjMR8ocoX3rF682tXnXrnSGbn
+    /DLZTMGpAl72PHGfiCvcsjFj6t8m36uJkZwgU9rMHutaBL95z6l9iGwm9b5Vte/e
+    nFqhcZECgYBR+jc3QPGQ9ALbXcN3oNovTu+6O2ugxTBjJuhBLdO6Q5oZto/3Ge6I
+    FHhptg27hq3EhRDNGrLF9Vd/5Ujj+hgrlQOVXYRRkZQMNp4kFTdlG0R/+Tm4b8S3
+    7axTT7jYA532uVbwN936DqRIFtyTmzp59FwE+pPOqVJvo36r6YbS9w==
     -----END RSA PRIVATE KEY-----
 
   ca.pem: |-
     -----BEGIN CERTIFICATE-----
-    MIIC9DCCAdygAwIBAgIUXRV3jdFy5+lbx5nmgtEAOYmdoDEwDQYJKoZIhvcNAQEL
-    BQAwEjEQMA4GA1UEAxMHUm9vdCBDQTAeFw0xNzAzMDEyMjEwMjZaFw0yNzAyMjcy
-    MjEwNTZaMBIxEDAOBgNVBAMTB1Jvb3QgQ0EwggEiMA0GCSqGSIb3DQEBAQUAA4IB
-    DwAwggEKAoIBAQDVebhyaSiuUyEAM/qsHouXGCcY5S7tWk0iGcn7YGg5OfCTlaeG
-    OjZekpPXowJ1U1qGAnZeL2QEtTPxiBS0IZ7tJywcDwZGtmydisrvtnNzDxJHUY88
-    T+r/RdDC5dEwBxtqK23SiKVJBDukKS2s7WaDtWkOC1Wv6vAEFdFHEuRtVI6qSHY2
-    4Utto1i4sEoRKxbnO2M10Z/35Z06iNNXk0bXwzxThgDxwUnxTV/Ms1odT6IuiSEN
-    U6hA4nK/pM1EP4uerZzSwYbzvLC/4lopsKEiCtXtLUGJC0fPlIW5OcN90uWQPUaF
-    VBnUKar9xML77y4Rm+SHtvGiKxjcKTnARSVBAgMBAAGjQjBAMA4GA1UdDwEB/wQE
-    AwIBBjAPBgNVHRMBAf8EBTADAQH/MB0GA1UdDgQWBBQ+GWl3mWuhXdvufF5VBOs4
-    fRYeyDANBgkqhkiG9w0BAQsFAAOCAQEArTgJ6FsjqW8cJSsXKlZ4YsBBYLgI/CNq
-    Jb5+WQkaY6zjuEFq9610r0cR9+zNCrNSGnHHpJFIBgkUwZSpucYpebi/H1L4A39J
-    Ly+cgWI9qM9Fxil9a1B2z+NXBdOzl3e3gQ6DwJeUSQDRnDdWvU+un0CsyOqFImX9
-    2EO2xJra4u+YZ+6Uw0EA6JlLlwN7aaDTP+6TqtNWOdTYCiWdGDgAz5K68jny/rzk
-    4Smdyd7jpWs+SHdRxc5mzMQLmmyQhUAy1vIEVZO7620+fQSGnjGmXk21eF873axa
-    3osDA/EVYQug7AhTICRKuhQIX+HlR+gy+Oe+eye+ZhYlIBrmkZJXEA==
+    MIIC9jCCAd6gAwIBAgIUVpGQ4b11qE33Vj+76ZZBkAgP9PUwDQYJKoZIhvcNAQEL
+    BQAwEjEQMA4GA1UEAxMHUm9vdCBDQTAgFw0xNzAzMDMwNTQ0NDRaGA8yMDY3MDIx
+    OTA1NDUxNFowEjEQMA4GA1UEAxMHUm9vdCBDQTCCASIwDQYJKoZIhvcNAQEBBQAD
+    ggEPADCCAQoCggEBAMyT4PF+B+fwyutMxCajyCZiutsgjMjPF27NA6AgFqQKIChi
+    s9WkiqgQ481KOwC2do3qeAVA2SGIaeBJYS6Rky8Qlte0mPktk3wrBnOh8QwPKTIq
+    /RQe2UvmCEJJ+HQdqFZ2DVwP3PKTIznvTvkiB6LsYD7xWOaSnpILjyb7WQVIrCLM
+    7Gn4BVqWrfDFQ2fCNjjareEQZjBMQ//TEDCySIVcH2732DQYaSmdrYbBIL3XOQTE
+    vyfvXMGszwueoVAV43RgHwqVvqZ1Dg9QwLk63Hq3DDlHqw/ZhUtTatdJ+jIaoGgl
+    IRBUBzKa5+PNqpLJ25nXkCb0cfsTMltoQHzMACkCAwEAAaNCMEAwDgYDVR0PAQH/
+    BAQDAgEGMA8GA1UdEwEB/wQFMAMBAf8wHQYDVR0OBBYEFKnsqGLeb2qqwLzYJEto
+    +Q9xg7afMA0GCSqGSIb3DQEBCwUAA4IBAQArFsSy8fKyPbZueiT9k/F9ls0US3WQ
+    af8JNP9XuhpC/J9SumuSJh8OybDnvxUZrqVtSu8GdD/Pq+0kDohluY3Byzrro16s
+    6oweA2tHAetXjwoOdmaQKGnNg2T6+prBScz+H3lHNjYZfG7Ey8YJdTIi5K4DHP67
+    C6f5e4lZcvVxpCqxcJWy3YK7TYE2KXKmHEk2GmoqCwMXhp2uviTaEM2eJ80Yai2s
+    vnbpRxTMFTC7c9YklP63rK6aF6Xzqe68+wPn/o6nx2JPbHRbOTEoEipoEMZLKILf
+    i3SnFU4sUUQgdtOI6smGYqXWxnDoK2hsUidVdLr8W1TvANQw6wh3V+Ya
     -----END CERTIFICATE-----
-
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
