--- a/deployments/secured-external-ca/vault.yaml
+++ b/deployments/secured-external-ca/vault.yaml
@@ -28,78 +28,78 @@ data:
 
   cert.pem: |-
     -----BEGIN CERTIFICATE-----
-    MIIDxTCCAq2gAwIBAgIUZxUEkxMNjZqD4ojR8Yxhog/oQ9swDQYJKoZIhvcNAQEL
-    BQAwGjEYMBYGA1UEAxMPSW50ZXJtZWRpYXRlIENBMB4XDTE3MDMwMTIyMTgwN1oX
-    DTE3MDMwMjIyMTgzN1owEDEOMAwGA1UEAxMFdmF1bHQwggEiMA0GCSqGSIb3DQEB
-    AQUAA4IBDwAwggEKAoIBAQDaltb4Asqdc528AihN+Jahf/R8sAOVGSFIgMb+zS/Q
-    eebqB77m8oekaATIexNDIu6hptWpOhHv1X6rs0YjxP+sMBP7Q9H4OVhEKPbzXHk1
-    El/61iLiQkARBQGXGAWcs1MCjOtzzeSv1fP7UoA8s3FrNQN95JeM9HkIJsrukRKl
-    /y6u2eDDWSMf3ODKENs8lmvuTqYOI6t9CUE+N7TUmiP65JcyAXz6HHLysmCMXOkW
-    5k8Y1JHKU20QrI5e3Sgw7ER9d1ChdCaz1Z8U6sd1zkITl7SQyZ9/7PK4GZg9ylHN
-    ckFE7oBzHC3eK6Dza36vvYFb7eAVGVavTwYfhcGK8hWPAgMBAAGjggELMIIBBzAO
-    BgNVHQ8BAf8EBAMCA6gwHQYDVR0lBBYwFAYIKwYBBQUHAwEGCCsGAQUFBwMCMB0G
-    A1UdDgQWBBQIzi4R6p6IfG/UKWvTp4O6aiwxCzAfBgNVHSMEGDAWgBQR8u+UjOHq
-    rqg4b/kPJA9yB9U++zBDBggrBgEFBQcBAQQ3MDUwMwYIKwYBBQUHMAKGJ2h0dHA6
-    Ly92YXVsdDo4MjAwL3YxL2ludGVybWVkaWF0ZS1jYS9jYTAWBgNVHREEDzANggV2
-    YXVsdIcEfwAAATA5BgNVHR8EMjAwMC6gLKAqhihodHRwOi8vdmF1bHQ6ODIwMC92
-    MS9pbnRlcm1lZGlhdGUtY2EvY3JsMA0GCSqGSIb3DQEBCwUAA4IBAQAhZrKclqSN
-    UqmwmoS4GWyaK8Z8S6/BlJRx2rNZkYlQbbbimzcIlzUxFPHDepSPJbQnOPLDSp0L
-    2QYBviujTIyip0W/Y9RPZc0wLrzZERLU4le+Z9qzJ/5eQn43zrBvQKsC1vnOx+HO
-    JEWV91UkixZDLOhZhQv0o7er3Fai4rLz7+uTOFErkvA0UghNrTZO6OtzJOFvQIBR
-    51z8GkdV39J8DafqJz8yy3DcO/MEoT9N4hlkQF/4z680ugsBy9ePJkRe3K+eeO7/
-    TTxV+bhUv9G0hQ4I6P5noPgrpoIp6Y6AHYxqwN61tSwLn6bVL9PABpb+2wLcjzVC
-    yeoPFOd0H0jQ
+    MIID0jCCArqgAwIBAgIUabUAeSAlNDmNDBc+2EQMwo6UckwwDQYJKoZIhvcNAQEL
+    BQAwGjEYMBYGA1UEAxMPSW50ZXJtZWRpYXRlIENBMCAXDTE3MDMwMzA1NDgxMVoY
+    DzIwNjcwMjE5MDM0ODQxWjAQMQ4wDAYDVQQDEwV2YXVsdDCCASIwDQYJKoZIhvcN
+    AQEBBQADggEPADCCAQoCggEBAKgBs/FzWhP5D/HYWtnZlL3dUndtE1B2Jgg2dG+u
+    1wZgXEZ8YhctwvzVAlFX3Xrz4vRhZlkOfE+Y7GbFgXsPMCXqDh7sd/+g6Vnutjqh
+    +9yhyy6Hq+DaSuD399RBG81GBsF2+LCVg+R3mC8pMXMYPJ+Gj+p++O0NN+bYPcGA
+    q8gJ40CiLHc39j6RkA/BCiVz/7+jLy+VAbRfft8PsCEiDjFOSgmvnxRDDgKrB9mP
+    KX7/hyWFTaBxr1ihS+vPz8VeSmaIa1ddPt7SC72JGMzF4Stt1ef5/miHY7gqcDBm
+    qoIkrmef2KzJ3L4su3JAETcbPL16BFJDHR2cB2V8qSELG1cCAwEAAaOCARYwggES
+    MA4GA1UdDwEB/wQEAwIDqDAdBgNVHSUEFjAUBggrBgEFBQcDAQYIKwYBBQUHAwIw
+    HQYDVR0OBBYEFH27PKp9+llnntdiSV9lVpACIvOwMB8GA1UdIwQYMBaAFL90TV74
+    j38QE0cSGrmn2PUUX75qMEMGCCsGAQUFBwEBBDcwNTAzBggrBgEFBQcwAoYnaHR0
+    cDovL3ZhdWx0OjgyMDAvdjEvaW50ZXJtZWRpYXRlLWNhL2NhMCEGA1UdEQQaMBiC
+    BXZhdWx0gglsb2NhbGhvc3SHBH8AAAEwOQYDVR0fBDIwMDAuoCygKoYoaHR0cDov
+    L3ZhdWx0OjgyMDAvdjEvaW50ZXJtZWRpYXRlLWNhL2NybDANBgkqhkiG9w0BAQsF
+    AAOCAQEAaUcQsr/fIZJ1GWW3WnfLJ4b3P+YHIP/cer5Mcv7Y5pqnozr7gT5zyGSR
+    0qNv5w1ZrN0qglxz3UBI/w6UrQJLPGt8Hm5+5y0YRIcLqKji3XqWE1guwyeMgCRt
+    SiZQzP1VaF+vHcw6qcn6Ge/vfFbzeq67/i5ueZTopy+uuz2wjPF16jkxVjPQDeop
+    TnjUTFpWHeRG+GBLleEJRkZRVJ1k/mZm5kCk+8kyfGggNgB84fmL9UBGxAH7Dn+Z
+    Pur/BMTEpdAdXmAk91Ux/Av2/0LV8ozp5hGBttLRkgEqeeBflNeDZxSeLSwhhHYL
+    iTmTd3zTZltx7X7bGJ9YUZvNTYE9Vw==
     -----END CERTIFICATE-----
     -----BEGIN CERTIFICATE-----
-    MIIDjzCCAnegAwIBAgIUKKS6n9WQGD2XSyN7+oS9kApMiMswDQYJKoZIhvcNAQEL
-    BQAwEjEQMA4GA1UEAxMHUm9vdCBDQTAeFw0xNzAzMDEyMjExNDNaFw0xNzA0MDIy
-    MjEyMTNaMBoxGDAWBgNVBAMTD0ludGVybWVkaWF0ZSBDQTCCASIwDQYJKoZIhvcN
-    AQEBBQADggEPADCCAQoCggEBANbI5f4DbMxmWGHye6cPMNnH0B6xpKKQHOPsBoP0
-    pWVXbyLlgGSidWG16qgOFyhU5fH6ed0Fmzzta5hQnu8kqKG1r4KMkOQgj2SsemGb
-    BzvFrnGwxSzA0gDlS16qAqOmhlQ4EX8SUIJ9N2iat2aKE+GgntIpR8Vi/n/optXB
-    d3G6lmERf0nw1xS87+Ip2438+8scePLHsUTvOPckUE5U4uSIrr1Gv6HNiGvLnvWO
-    giRAnur/ikDDU1jHY/gqnzjrHZyj2MZkMeeALreMxFl0fnyPffe5WQeFFJ8BgkI2
-    iqPTnEtGGvsEKAWCoAicvXty2U/ByPlvfYvUGBZYJUOjK6UCAwEAAaOB1DCB0TAO
-    BgNVHQ8BAf8EBAMCAQYwDwYDVR0TAQH/BAUwAwEB/zAdBgNVHQ4EFgQUEfLvlIzh
-    6q6oOG/5DyQPcgfVPvswHwYDVR0jBBgwFoAUPhlpd5lroV3b7nxeVQTrOH0WHsgw
-    OwYIKwYBBQUHAQEELzAtMCsGCCsGAQUFBzAChh9odHRwOi8vdmF1bHQ6ODIwMC92
-    MS9yb290LWNhL2NhMDEGA1UdHwQqMCgwJqAkoCKGIGh0dHA6Ly92YXVsdDo4MjAw
-    L3YxL3Jvb3QtY2EvY3JsMA0GCSqGSIb3DQEBCwUAA4IBAQCXvaglJ2Sc04vz7m6f
-    t08LXIXeFyXGSs1YX7UarWf9V12g6UQwGgb+NrN7x1wuWHrEahmQl+SxTtXvbQqB
-    ipHAzCbFV/pSPcF4LQkDcY6iXYakzeeFB4rgP+g2W/3i6VV0jGPaD1p4Ttv3hpIh
-    l2Nrwp/wR7VcO/df2NulcFEPIqOiKI8GqTA3HkZFg/tIlymMxQc7zZPBiSqC7TyY
-    KegKN2G/VDOLoFnvcUq033A+yF3ULabpT8CuScV2kPU+XFYMM9+n0GDRwiU0C6g0
-    XbxuRKVbfKEVvUP/R9+Kpthm4TGmHCy2EyuieRlLXdgnWqyZV+jYu9E7a+hcU61B
-    fLha
+    MIIDkTCCAnmgAwIBAgIUXvxwgZK/6qtpxmuZty23U6AVnF0wDQYJKoZIhvcNAQEL
+    BQAwEjEQMA4GA1UEAxMHUm9vdCBDQTAgFw0xNzAzMDMwNTQ2NDRaGA8yMDY3MDIx
+    OTA0NDcxNFowGjEYMBYGA1UEAxMPSW50ZXJtZWRpYXRlIENBMIIBIjANBgkqhkiG
+    9w0BAQEFAAOCAQ8AMIIBCgKCAQEAol8fFnbOHydXo6wnuuhEb3NfJu0+0RTgFzWr
+    6xekvQrsRL4tUIonhC3xOXyINswhOI53XLZCTnSd4L7oVdY0umoNRXqtpSvjulK0
+    Ggd5+dxzBKQbAQ+DWemN8g9fLbkd8R0fx3gtmjY+4hASFuyX+wI/jroTy+Cyluid
+    ahVZmzDEW/KyGjBN4xxkTlHceX8VFvwb7f/39ALCl9mBLpDiTD8qLkZRPZUzX02J
+    OGLylGK57UTS/9zLC39+eil1/qycpBPHbVXj+AnSIp4F+ikAfY1OWC08fqK1H6LA
+    iuqk2uSA4Ft0vyRhGPt/TttrvWTVx+VeCxHi+cXmtY9lQnuaqwIDAQABo4HUMIHR
+    MA4GA1UdDwEB/wQEAwIBBjAPBgNVHRMBAf8EBTADAQH/MB0GA1UdDgQWBBS/dE1e
+    +I9/EBNHEhq5p9j1FF++ajAfBgNVHSMEGDAWgBSp7Khi3m9qqsC82CRLaPkPcYO2
+    nzA7BggrBgEFBQcBAQQvMC0wKwYIKwYBBQUHMAKGH2h0dHA6Ly92YXVsdDo4MjAw
+    L3YxL3Jvb3QtY2EvY2EwMQYDVR0fBCowKDAmoCSgIoYgaHR0cDovL3ZhdWx0Ojgy
+    MDAvdjEvcm9vdC1jYS9jcmwwDQYJKoZIhvcNAQELBQADggEBABMF+ferbsJC3dlw
+    6kUsd+idLuYM1eXhpjgkgh2D/5H01Hjar39tuIZNH8uTPCNNvV/o5UHEG7b97XEk
+    +EXH9HZopFYYuSqQZqE+x8Cq9uKXWaSI69w7N9zVyMFEX+ZsHRm6lvntedZhXERU
+    HHUiD8Qvf5Dui4RLXcO6eKT6zr0fVNurl6hs3l6ma4Z0zDmrgBhlxrW98gXhRRyK
+    5M0AxBAfNRsT7hu+Tp7xrNuhDOE+SPotbIVi30rVAn88BhkYAtJK3CIAKRJ1W5bW
+    Sjv5ZzZvfE6u0R255qpoJQfUjHUL1OmFTW3yJrgjabrz/GgsagbD53h33ML9cNez
+    hhBu79U=
     -----END CERTIFICATE-----
 
   cert.key: |-
     -----BEGIN RSA PRIVATE KEY-----
-    MIIEowIBAAKCAQEA2pbW+ALKnXOdvAIoTfiWoX/0fLADlRkhSIDG/s0v0Hnm6ge+
-    5vKHpGgEyHsTQyLuoabVqToR79V+q7NGI8T/rDAT+0PR+DlYRCj281x5NRJf+tYi
-    4kJAEQUBlxgFnLNTAozrc83kr9Xz+1KAPLNxazUDfeSXjPR5CCbK7pESpf8urtng
-    w1kjH9zgyhDbPJZr7k6mDiOrfQlBPje01Joj+uSXMgF8+hxy8rJgjFzpFuZPGNSR
-    ylNtEKyOXt0oMOxEfXdQoXQms9WfFOrHdc5CE5e0kMmff+zyuBmYPcpRzXJBRO6A
-    cxwt3iug82t+r72BW+3gFRlWr08GH4XBivIVjwIDAQABAoIBAHRS6Ts6YRDBQiOX
-    ElPMAn0XVsgz8vQZV3j57uwRzWwoMxY/4PuN/Vkkcccul+WWZV9pJTLVUE5NUweU
-    c7L9VwIO49NHGCn8elhrZF/FykrP6HvYEOBPWUC1ZU8+3V2yoG4vB+2smBJqzVfl
-    Y5Dp/WWL5LvONkgwoWgRHNUwJrhmxDU/7reoPg6ncGxZpPRNsUtFUy43apR2Lg9i
-    1ZRHfDCqFiBxT/TZikukFHzV6RAR0AShKyghxmLYmV4nw4yxKM5/NcMTDkrY7tAH
-    C5VWLx7kp9Gz469I6ExnU7rRc7PjOm9Sl0o0PtMShjUwXlErc3/Vr5e/pUHUm4K4
-    Jj2CeMECgYEA4sLedabxcGJ5oRQhAY/vUf04jrp155O2PkwEjIB3rqewecucl8ZP
-    7rqpUpiYn119YPuX2fFV2qzM1WjCZVvtW37IIW3GYg4P/7/patDsi1RvuW+k/H3i
-    KPMM5EsCFCEHFA/uKYdJwgpYmy6Pv9jvHm3uhoBU6lLsQnneSz25nUcCgYEA9sY4
-    /S+OYjXQ8u7LWEP19CWYHR1IZ5nPA7ozl0L62L2mg8sMXlSknvVPMoeNogcyJDz/
-    S9F/H8n4Wt4yPMuBwwiMruB2lqdr//tho9eTUPGSKQ/4DmrMZhQ1xzkQa+hSwqp/
-    Ry2BnJnxjHrodmTQLC0lBkXhIZExXnGv+EV2yXkCgYBuBAVSJ3C0CdLg55cr3t1J
-    dgVemfBiLjQY/WCnmhx2zDy+mp6atEhLlpxXylkh2IXf67C8uG3i7jtivrSx4GvE
-    HDqUnWHGaPQyLLXecQaSgqDB4vy0045KN8FlcU7M3UlF3oS5+T07uzFJ+MkdVu6M
-    YOF8t/56wUiG6AGFl6jaOQKBgQCtMbnVmIbpzrNzjL0SmcAJNkloRaEHdR+hkhGb
-    W9sKOzCe1uc7XVSca7bF0/VHfp1maZkT8VizSuEPhVrk6D+OTnXOVqNkYOSfqCKD
-    B03RRXo7b4W9OJ90FUMZK6em1EshbOAfaITLEBBDdA+q6F5iYtzVZj33fRuVGV1T
-    dg1EoQKBgDUcCG2CE8CYvgBZXTbPzEqgaoF72NoBnD7SMoEfQiESxXxuG9ieAOYh
-    2HE19bq7sND1G/9mBJ/++daEAolNiA1/VU/RDV48JEyjxH7AKH++2pIECjZaF2sQ
-    h7GCGkAT6R07pLQnbW8CZd4lVOj47npRQayu36CDMTBztkYJ33b5
+    MIIEogIBAAKCAQEAqAGz8XNaE/kP8dha2dmUvd1Sd20TUHYmCDZ0b67XBmBcRnxi
+    Fy3C/NUCUVfdevPi9GFmWQ58T5jsZsWBew8wJeoOHux3/6DpWe62OqH73KHLLoer
+    4NpK4Pf31EEbzUYGwXb4sJWD5HeYLykxcxg8n4aP6n747Q035tg9wYCryAnjQKIs
+    dzf2PpGQD8EKJXP/v6MvL5UBtF9+3w+wISIOMU5KCa+fFEMOAqsH2Y8pfv+HJYVN
+    oHGvWKFL68/PxV5KZohrV10+3tILvYkYzMXhK23V5/n+aIdjuCpwMGaqgiSuZ5/Y
+    rMncviy7ckARNxs8vXoEUkMdHZwHZXypIQsbVwIDAQABAoIBAFACt5qWj+CRLZnE
+    qsezClY9j+eWR6t7CPPCU0NY5ciAnZFn7SMSxRi5rOfmS3EhswUlWaOx9VvG/VaY
+    WuirPAfiZqUtgpx4Gomc2KYlvJe/ac8YB7AG5cAr95fbBg2FevQp35fhLLXiitRy
+    7rzcXwqt/93yaEQklmnWs9pyl9ykq0PKiMJMj/XuotFE6Bd29Ojpi2GPCQmK9ofo
+    iycMCZRl8zpxZ46wQHfovT++jotk/tzqIZ7WJyt4GylB+syapdxmdLRhpdYQ5z3N
+    +k8xnsY87y8cUMYExLSB1VDLBTKb5nHbf4u99AHxcM47iXF8Bbw6tOAOWDjy0Udx
+    pTcxmjkCgYEA0/lxdKZ42FWhA9nP8HD0HFwlhcQR73S/Z9aC32d9zUkyjSehLnXm
+    mhhKPfJtsIERNdWXZDT5vl+JwfIkHrRwPCESlsQrkB0cP4ywfRjyuLxnbbf74ocA
+    VR5qYp2hycdFCUYhM/q/hsHEwy/DA9jchtY3PDQt1XGFkCqJWvJ3ZQUCgYEAyuaF
+    OJ3TDelYSI83mpeLlvpJBpBP4FEYmtYQjyS4YohCyJWbOzaMCF3Sppzk1t3t+JTH
+    ahBePl9WuUyYGJcIZcOh9zsTFiXxkJZpoYqApuOD/OsSxXOF3razHpquc/irICyw
+    89pwxHiPSP88TFhA5hTLyn+EBB2+7frocLLB7asCgYAg7SpWeFVlJUfxlS/bpXAF
+    x7p8YMx4aaYhtwx1L1o3PRuBGZrL4LyFSyidHr8zH5lQx3DQu/nfPG/llHtP2a9l
+    Z62/hZFOvXbZ2DzB8dIiKAHY5S9XLKk8j5Du6JVtBmsO2bnmnRiLEiZCO3ULb/Ax
+    caz6yRAli5C3qCPV4LvzEQKBgD6icMeseMWXnggwJeMUGyRNORPMosvFXQoXQN9f
+    X4gTNkKDZHsf+JRwmiGS11W5Bsgw7WpBiUZJ2hSzn1Qf85iujqYqV1cD+ZE/zXXv
+    so1SOKFv08ieQ9ofniW5bFcikXkKMsnkSeFssha/q9aJe+dKzipBuPgoUpNWXEDF
+    /fWnAoGAYGh0fZ9pZOnp3glvVqWAcAABbARm5x3O8dwq40ZRfPvxJn0S3TIsZW2w
+    epV4v3ZP260J81Dbxceg6ZGSGBtbHjEWXj4PzKbDaqlIKV5seme7VQO476KZtpdQ
+    eT3jPxyrm58zSuXiwmKzrwiqyJ0Fz/Z81qEaLlw0yv9Tlv944dc=
     -----END RSA PRIVATE KEY-----
 ---
 apiVersion: extensions/v1beta1
