--- a/deployments/quick-start/kubernetes-vault.yaml
+++ b/deployments/quick-start/kubernetes-vault.yaml
@@ -26,7 +26,8 @@ data:
       token: 91526d9b-4850-3405-02a8-aa29e74e17a5
 
     kubernetes:
-      namespace: ${KUBERNETES_NAMESPACE}
+      watchNamespace: ${KUBERNETES_NAMESPACE}
+      serviceNamespace: ${KUBERNETES_NAMESPACE}
       service: kubernetes-vault
 
     prometheus:
@@ -47,7 +48,7 @@ spec:
     spec:
       containers:
       - name: kubernetes-vault
-        image: boostport/kubernetes-vault:0.3.0
+        image: boostport/kubernetes-vault:0.4.0
         env:
         - name: KUBERNETES_NAMESPACE
           valueFrom:
