--- a/glide.yaml
+++ b/glide.yaml
@@ -8,8 +8,6 @@ import:
 - package: github.com/hashicorp/raft-boltdb
 - package: github.com/pkg/errors
   version: ^0.8.0
-- package: k8s.io/client-go
-  version: ^2.0.0
 - package: github.com/hashicorp/vault
   version: ^0.7.0
   subpackages:
@@ -22,3 +20,5 @@ import:
   version: ^0.8.0
 - package: github.com/spf13/viper
 - package: github.com/spf13/cobra
+- package: github.com/ericchiang/k8s
+  version: ^0.3.0
