--- a/controller/Dockerfile
+++ b/controller/Dockerfile
@@ -1,6 +1,8 @@
 FROM alpine:3.5
 MAINTAINER Francis Chuang <francis.chuang@boostport.com>
 
+RUN apk --update add ca-certificates && update-ca-certificates
+
 RUN mkdir -p /kubernetes-vault
 
 ADD kubernetes-vault /bin/kubernetes-vault
