Use latest docker images

--- a/deployments/quick-start/vault.yaml
+++ b/deployments/quick-start/vault.yaml
@@ -25,7 +25,7 @@ spec:
         app: vault
     spec:
       containers:
-      - image: vault:0.7.2
+      - image: vault
         name: vault
         ports:
         - containerPort: 8200
