--- a/deployments/secured-external-ca/vault.yaml
+++ b/deployments/secured-external-ca/vault.yaml
@@ -116,7 +116,7 @@ spec:
         app: vault
     spec:
       containers:
-      - image: vault:0.7.2
+      - image: vault
         command:
           - vault
           - server
