--- a/deployments/quick-start/kubernetes-vault.yaml
+++ b/deployments/quick-start/kubernetes-vault.yaml
@@ -48,7 +48,7 @@ spec:
     spec:
       containers:
       - name: kubernetes-vault
-        image: boostport/kubernetes-vault:0.4.5
+        image: boostport/kubernetes-vault
         env:
         - name: KUBERNETES_NAMESPACE
           valueFrom:
