Update deployments to include support for RBAC for Kubernetes clusters >= 1.6

--- a/deployments/quick-start/sample-app.yaml
+++ b/deployments/quick-start/sample-app.yaml
@@ -10,30 +10,21 @@ spec:
         app: sample-app
       annotations:
         pod.boostport.com/vault-approle: sample-app
-        pod.boostport.com/vault-init-container: install
-        pod.beta.kubernetes.io/init-containers: '[
-          {
-            "name": "install",
-            "image": "boostport/kubernetes-vault-init",
-            "imagePullPolicy": "Always",
-            "env": [
-                {
-                    "name": "VAULT_ROLE_ID",
-                    "value": "313b0821-4ff6-1df8-54dd-c3eea5d3b8b1"
-                }
-            ],
-            "volumeMounts": [
-                {
-                    "name": "vault-token",
-                    "mountPath": "/var/run/secrets/boostport.com"
-                }
-            ]
-          }
-        ]'
+        pod.boostport.com/vault-init-container: get-vault-token
     spec:
       containers:
       - name: sample-app
         image: boostport/kubernetes-vault-sample-app
+        volumeMounts:
+        - name: vault-token
+          mountPath: /var/run/secrets/boostport.com
+      initContainers:
+      - name: get-vault-token
+        image: boostport/kubernetes-vault-init
+        imagePullPolicy: Always
+        env:
+        - name: VAULT_ROLE_ID
+          value: 313b0821-4ff6-1df8-54dd-c3eea5d3b8b1
         volumeMounts:
         - name: vault-token
           mountPath: /var/run/secrets/boostport.com
