--- a/deployments/quick-start/kubernetes-vault-kube-1.5.yaml
+++ b/deployments/quick-start/kubernetes-vault-kube-1.5.yaml
@@ -1,52 +1,3 @@
----
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: kube-vault
-  namespace: default
----
-kind: ClusterRole
-apiVersion: rbac.authorization.k8s.io/v1beta1
-metadata:
-  name: kube-vault
-rules:
-- apiGroups: [""]
-  resources:
-  - pods
-  verbs: ["watch"]
-- apiGroups: [""]
-  resources:
-  - endpoints
-  verbs: ["list"]
----
-kind: ClusterRoleBinding
-apiVersion: rbac.authorization.k8s.io/v1beta1
-metadata:
-  name: kube-vault
-  namespace: default
-subjects:
-- kind: ServiceAccount
-  name: kube-vault
-  namespace: default
-roleRef:
-  kind: ClusterRole
-  name: kube-vault
-  apiGroup: rbac.authorization.k8s.io
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: vault
-  namespace: default
-  labels:
-    app: vault
-spec:
-  ports:
-    - name: vault
-      port: 8200
-  selector:
-    app: vault
----
 apiVersion: v1
 kind: Service
 metadata:
@@ -88,7 +39,6 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: kubernetes-vault
-  namespace: default
 spec:
   replicas: 3
   template:
@@ -96,10 +46,10 @@ spec:
       labels:
         run: kubernetes-vault
     spec:
-      serviceAccountName: kube-vault
       containers:
       - name: kubernetes-vault
         image: boostport/kubernetes-vault
+        imagePullPolicy: Always
         env:
         - name: KUBERNETES_NAMESPACE
           valueFrom:
