Add version command

--- a/cmd/controller/Dockerfile.dev
+++ b/cmd/controller/Dockerfile.dev
@@ -1,5 +1,5 @@
 FROM alpine:latest
-LABEL maintainer Francis Chuang <francis.chuang@boostport.com>
+LABEL maintainer="Francis Chuang <francis.chuang@boostport.com>"
 
 RUN mkdir -p /kubernetes-vault
 
