--- a/cmd/init/hooks/build
+++ b/cmd/init/hooks/build
@@ -1,2 +1,2 @@
 #!/bin/bash
-docker build --build-arg SOURCE_COMMIT=$SOURCE_COMMIT --build-arg CACHE_TAG=$CACHE_TAG -t $IMAGE_NAME /
+docker build --build-arg SOURCE_COMMIT=$SOURCE_COMMIT --build-arg CACHE_TAG=$CACHE_TAG -f /cmd/init/Dockerfile -t $IMAGE_NAME /
