Switch from CACHE_TAG to SOURCE_BRANCH when building using docker cloud

--- a/cmd/controller/Dockerfile
+++ b/cmd/controller/Dockerfile
@@ -1,7 +1,7 @@
 FROM golang:1.9-alpine as builder
 
 ARG SOURCE_COMMIT
-ARG CACHE_TAG
+ARG SOURCE_BRANCH
 
 WORKDIR $GOPATH/src/github.com/Boostport/kubernetes-vault
 
@@ -10,7 +10,7 @@ COPY . .
 RUN apk --update add gcc git musl-dev \
  && go get -u github.com/golang/dep/cmd/dep \
  && dep ensure \
- && go build -ldflags "-X 'main.commit=${SOURCE_COMMIT}' -X 'main.tag=${CACHE_TAG}' -X 'main.buildDate=$(date -u)'" -o kubernetes-vault ./cmd/controller
+ && go build -ldflags "-X 'main.commit=${SOURCE_COMMIT}' -X 'main.tag=${SOURCE_BRANCH}' -X 'main.buildDate=$(date -u)'" -o kubernetes-vault ./cmd/controller
 
 FROM alpine:latest
 LABEL maintainer="Francis Chuang <francis.chuang@boostport.com>"
