--- a/cmd/sample-app/hooks/build
+++ b/cmd/sample-app/hooks/build
@@ -1,2 +1,2 @@
 #!/bin/bash
-docker build --build-arg SOURCE_COMMIT=$SOURCE_COMMIT --build-arg CACHE_TAG=$CACHE_TAG -f Dockerfile -t $IMAGE_NAME ../../
+docker build --build-arg SOURCE_COMMIT=$SOURCE_COMMIT --build-arg SOURCE_BRANCH=$SOURCE_BRANCH -f Dockerfile -t $IMAGE_NAME ../../
